
include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = tomboy
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
	figures/add-notebook-search.png \
	figures/add-to-notebook.png \
	figures/delete-notebook.png \
	figures/move-notes-search.png \
	figures/new-notebook.png \
	figures/notebook-icon.png \
	figures/note-template.png \
	figures/tomboy-main-menu.png \
	figures/tomboy-new-note.png \
	figures/tomboy-panel.png \
	figures/tomboy-pindown.png \
	figures/tomboy-pinup.png \
	figures/tomboy.png \
	figures/tomboy-preferences-add-ins.png \
	figures/tomboy-preferences-editing.png \
	figures/tomboy-preferences-hotkeys.png \
	figures/tomboy-preferences-synchronization.png \
	figures/tomboy-tools.png

DOC_PAGES = \
	addins-desktop.page \
	addins-formatting.page \
	addins.page \
	addins-sync.page \
	addins-tools.page \
	advanced.page \
	create-notebook.page \
	create-note.page \
	delete-notes.page \
	edit-note.page \
	hotkeys.page \
	index.page \
	introduction.page \
	note-edit-prefs.page \
	prefs.page \
	problems.page \
	search.page \
	sync.page \
	sync-setup.page \
	whatsnew.page

DOC_LINGUAS = ca cs de el en_GB es eu fr gl hu it lt oc pl pt_BR ru sv uk vi zh_CN
