
include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_ID = tomboy
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
	figures/add-notebook-search.png \
	figures/add-to-notebook.png \
	figures/delete-notebook.png \
	figures/move-notes-search.png \
	figures/new-notebook.png \
	figures/notebook-icon.png \
	figures/note-template.png \
	figures/tomboy-main-menu.png \
	figures/tomboy-new-note.png \
	figures/tomboy-panel.png \
	figures/tomboy-pindown.png \
	figures/tomboy-pinup.png \
	figures/tomboy.png \
	figures/tomboy-preferences-add-ins.png \
	figures/tomboy-preferences-editing.png \
	figures/tomboy-preferences-hotkeys.png \
	figures/tomboy-preferences-synchronization.png \
	figures/tomboy-tools.png

DOC_PAGES = \
	addins-desktop-bugzilla.page \
	addins-desktop-evolution.page \
	addins-desktop-printing.page \
	addins-formatting-fixed-width.page \
	addins-formatting-underline.page \
	addins-preferences.page \
	addins-sync-local.page \
	addins-sync-ssh.page \
	addins-sync-webdav.page \
	addins-tools-backlinks.page \
	addins-tools-html-export.page \
	addins-tools-note-of-day.page \
	addins-tools-timestamp.page \
	addins.page \
	create-note.page \
	create-notebook.page \
	delete-notes.page \
	edit-note.page \
	hotkeys.page \
	index.page \
	introduction.page \
	legal.xml \
	note-edit-prefs.page \
	prefs.page \
	search.page \
	sync-setup.page \
	sync.page \
	whatsnew.page

DOC_LINGUAS = ca cs de el en_GB es eu fr gl hu it lt lv oc pl pt_BR ru sl sv uk vi zh_CN
