
@YELP_HELP_RULES@

HELP_ID = tomboy
DOC_INCLUDES = legal.xml
HELP_MEDIA = \
	figures/icon.png \
	figures/tomboy.png

HELP_FILES = \
	addins-desktop-bugzilla.page \
	addins-desktop-printing.page \
	addins-formatting-fixed-width.page \
	addins-formatting-underline.page \
	addins-preferences.page \
	addins-sync-local.page \
	addins-sync-ssh.page \
	addins-sync-webdav.page \
	addins-sync-webservice.page \
	addins-tools-backlinks.page \
	addins-tools-html-export.page \
	addins-tools-note-of-day.page \
	addins-tools-timestamp.page \
	addins.page \
	create-note.page \
	create-notebook.page \
	delete-notes.page \
	edit-note.page \
	hotkeys.page \
	index.page \
	introduction.page \
	legal.xml \
	note-edit-prefs.page \
	pin-notes.page \
	prefs.page \
	search.page \
	sync-setup.page \
	sync.page \
	whatsnew.page

HELP_LINGUAS = ca cs de el en_GB es eu fr gl hu it lt lv oc pl pt_BR ro ru sl sv uk vi zh_CN
