SUBDIRS =				\
	Backlinks			\
	Bugzilla			\
	Evolution		\
	ExportToHtml			\
	FileSystemSyncService	\
	FixedWidth			\
	GalagoPresence		\
	InsertTimestamp		\
	NoteOfTheDay		\
	PrintNotes			\
	Sketching			\
	SshSyncService		\
	StickyNoteImport	\
	Tasque			\
	NoteDirectoryWatcher			\
	WebDavSyncService			\
	WebSyncService

