SUBDIRS =				\
	AdvancedPreferences	\
	Backlinks			\
	Bugzilla			\
	ExportToHtml			\
	FileSystemSyncService	\
	FixedWidth			\
	GalagoPresence		\
	InsertTimestamp		\
	NoteOfTheDay		\
	PrintNotes			\
	RemoveBrokenLinks	\
	Sketching			\
	SshSyncService		\
	StickyNoteImport	\
	Tasque			\
	NoteDirectoryWatcher			\
	Underline		\
	WebDavSyncService			\
	WebSyncService
#	Evolution		\ (FIXME: Temporarily removed!)

