SUBDIRS =				\
	AdvancedPreferences	\
	Backlinks			\
	Bugzilla			\
	Evolution		\
	ExportToHtml			\
	FileSystemSyncService	\
	FixedWidth			\
	GalagoPresence		\
	InsertTimestamp		\
	NoteOfTheDay		\
	PrintNotes			\
	RemoveBrokenLinks	\
	Sketching			\
	SshSyncService		\
	StickyNoteImport	\
	Tasque			\
	NoteDirectoryWatcher			\
	Underline		\
	WebDavSyncService			\
	WebSyncService

